--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.11.0",
     "axios": "^1.9.0",
     "nuxt": "^3.17.4",
+    "pinia": "^3.0.2",
     "swiper": "^11.2.8",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1"
